--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "Jin Wang",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^3.0.6",
         "body-parser": "^1.19.0",
         "cron": "^1.7.1",
         "csvtojson": "^2.0.8",
