--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
         "cron": "^1.7.1",
         "csvtojson": "^2.0.10",
         "express": "^4.17.1",
-        "lodash": ">=4.17.13",
+        "lodash": "^4.17.15",
         "md5": "^2.2.1",
         "moment": "^2.24.0",
         "node-localstorage": "^1.3.1",
         "pg": "^7.11.0",
-        "pino": "^5.12.6",
+        "pino": "^5.13.0",
         "q": "^1.5.1",
         "sequelize": "^5.10.1"
     },
